# durak1

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
inc/: AI.h  Actor.h  Bot.h  Card.h  Color.h  Context.h  Deck.h  Drawing.h  Event.hpp  Game.h  Hand.h  IController.h  IObserver.h  Mutex.h  Player.h  PlayersGroup.h  Random.hpp  Round.h  Settings.h  UI.h  UIObject.h  User.h  Utility.hpp  Vector.h
src/: Bot.cpp  Card.cpp  Context.cpp  Deck.cpp  Drawing.cpp  Game.cpp  Hand.cpp  Mutex.cpp  Player.cpp  PlayersGroup.cpp  Round.cpp  UI.cpp  UIObject.cpp  User.cpp
